--- a/config.json
+++ b/config.json
@@ -1,9 +1,7 @@
 {
   "NAME": "Federated Learning with Homomorphic Encryption on CRNN",
 
-  "AUTHOR": "HANCHI REN, JINGJING DENG and XIANGHUA XIE",
-
-  "INSTUTITE": "Vision and Machine Learning Group, Computer Science, Swansea University, United Kingdom",
+  "AUTHOR": "Ren, Hanchi and Deng, Jingjing, Xie, Xianghua, Xiaoke Ma and Yichuan Wang",
 
   "WORKMODE": "Estimation",
 
